# naver-blog-auto

./: .env.example  .gitignore  CLAUDE.md  DESIGN_v5.md  README.md  SEO_RESEARCH.md  pyproject.toml  railway.toml  requirements.txt  start_frontend.sh  start_streamlit.sh
.claude/projects/-Users-koyounghun-projects-naver-blog-auto/memory/: MEMORY.md  project_status.md
app/: main.py
app/pages/: 1_settings.py  2_keyword.py  3_write.py  4_preview.py  5_history.py  6_seo_lab.py
backend/: main.py  requirements.txt  start.sh
backend/routers/: generate.py  history.py  image.py  keyword.py  reference.py  seo.py  settings.py
core/: config.py  generator.py  http_client.py  image_utils.py  keyword.py  keyword_history.py  llm_client.py  logger.py  publisher.py  reference.py  seo_validator.py  template.py
docs/: 2026-03-31-railway-deploy.md
frontend/: package-lock.json  package.json  railway.toml
frontend/app/: layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/keyword/: page.tsx
frontend/app/preview/: page.tsx
frontend/app/seo-lab/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/write/: page.tsx
frontend/components/: BlogPreview.tsx  SeoChecklist.tsx  Sidebar.tsx  StreamingText.tsx
frontend/lib/: api.ts  store.ts  types.ts
prompts/: draft_generation.yaml  keyword_expansion.yaml  seo_optimization.yaml  seo_strategy_depth.yaml  seo_strategy_experience.yaml  seo_strategy_human.yaml
scripts/: start-local-llm.sh
tests/: test_generator.py  test_image_utils.py  test_keyword.py  test_publisher.py  test_seo_validator.py
